--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/main/metadata/metadata.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/main/metadata/metadata.get_ru.properties
@@ -1,1 +1,2 @@
 logicecm.base.show-arhive.label=\u0421\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0443\u043F\u043E\u043C\u0438\u043D\u0430\u043D\u0438\u044F
+dashlet.expand.tooltip=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
