--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.workgroups.grid.get_ru.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.workgroups.grid.get_ru.properties
@@ -1,8 +1,8 @@
 #X-Generator: crowdin.net
 label.column.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
 label.column.actions=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F
-label.create-row.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435
-label.edit-row.title=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
+label.create-row.title=\u041D\u043E\u0432\u0430\u044F \u0440\u0430\u0431\u043E\u0447\u0430\u044F \u0433\u0440\u0443\u043F\u043F\u0430
+label.edit-row.title=\u0420\u0430\u0431\u043E\u0447\u0430\u044F \u0433\u0440\u0443\u043F\u043F\u0430
 label.edit-row.edit-dataitem=\u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u0430...
 
 message.select-list=\u041D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D \u0441\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
