--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get_ru.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/org.staff-list.grid.get_ru.properties
@@ -11,9 +11,10 @@ message.employee.position.delete.failure.primary=\u041D\u0435\u0432\u043E\u0437\
 #X-Generator: crowdin.net
 label.column.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
 label.column.actions=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F
-label.create-row.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435
-label.edit-row.title=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
+label.create-row.title=\u041D\u043E\u0432\u0430\u044F \u043F\u043E\u0437\u0438\u0446\u0438\u044F
+label.edit-row.title=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u043D\u0430\u044F \u043F\u043E\u0437\u0438\u0446\u0438\u044F
 label.edit-row.edit-dataitem=\u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u0430...
+label.employee-link.add=\u041D\u043E\u0432\u044B\u0439 \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A \u043D\u0430 \u043F\u043E\u0437\u0438\u0446\u0438\u044E
 
 message.select-list=\u041D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D \u0441\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A
 message.error.columns.title=\u0421\u0442\u043E\u043B\u0431\u0446\u044B
