--- a/lecm-subscriptions/repo/src/main/config/messages/subscriptions_ru.properties
+++ b/lecm-subscriptions/repo/src/main/config/messages/subscriptions_ru.properties
@@ -6,8 +6,8 @@ lecm-subscr_subscriptionsStructure.association.lecm-subscr_subscription-object-a
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_subscription-object-assoc.description=\u041E\u0431\u044A\u0435\u043A\u0442 \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0438
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-employee-assoc.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0438
-lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-position-assoc.title=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u043D\u044B\u0435 \u043F\u043E\u0437\u0438\u0446\u0438\u0438
-lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-position-assoc.description=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u043D\u044B\u0435 \u043F\u043E\u0437\u0438\u0446\u0438\u0438
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-position-assoc.title=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u0438
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-position-assoc.description=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u0438
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organization-unit-assoc.title=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organization-unit-assoc.description=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F unit
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.title=\u0420\u0430\u0431\u043E\u0447\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
