--- a/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/business-roles/org.business-roles.grid.get_ru.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/orgstructure/business-roles/org.business-roles.grid.get_ru.properties
@@ -1,1 +1,2 @@
-logicecm.dictionary.view=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440
+logicecm.dictionary.view=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440
+label.edit-row.title=\u0411\u0438\u0437\u043D\u0435\u0441-\u0440\u043E\u043B\u044C
