--- a/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
@@ -57,7 +57,7 @@ lecm-sched_schedule-model.property.lecm-sched_time-limit-start.title=\u041d\u043
 #<property name="lecm-sched:time-limit-end">
 lecm-sched_schedule-model.property.lecm-sched_time-limit-end.title=\u041a\u043e\u043d\u0435\u0446 \u0441\u0440\u043e\u043a\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f \u0440\u0430\u0441\u043f\u0438\u0441\u0430\u043d\u0438\u044f
 #<association name="lecm-sched:sched-employee-link-assoc">
-lecm-sched_schedule-model.association.lecm-sched_sched-employee-link-assoc.title=\u0421\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a/\u043f\u043e\u0434\u0440\u0430\u0437\u0434\u0435\u043b\u0435\u043d\u0438\u0435
+lecm-sched_schedule-model.association.lecm-sched_sched-employee-link-assoc.title=\u0421\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a \u0438\u043b\u0438 \u043f\u043e\u0434\u0440\u0430\u0437\u0434\u0435\u043b\u0435\u043d\u0438\u0435
 #<child-association name="lecm-sched:contains-element">
 lecm-sched_schedule-model.association.lecm-sched_contains-element=\u042d\u043b\u0435\u043c\u0435\u043d\u0442\u044b \u0433\u0440\u0430\u0444\u0438\u043a\u0430
 
