--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
@@ -1,3 +1,6 @@
+header.statemachine.label=\u041C\u0430\u0448\u0438\u043D\u0430 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0439
+header.statemachine.description=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043C\u0430\u0448\u0438\u043D\u044B \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0439
+
 statemachine.editor.expression=\u0423\u0441\u043B\u043E\u0432\u0438\u0435
 statemachine.editor.transition=\u041F\u0435\u0440\u0435\u0445\u043E\u0434
 statemachine.execution.start=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u043F\u0440\u0438 \u0432\u0445\u043E\u0434\u0435 \u0432 \u0441\u0442\u0430\u0442\u0443\u0441
