--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -3,16 +3,16 @@ lecm-stmeditor_model.property.lecm-stmeditor_transitionExpression.title=\u0412\u
 lecm-stmeditor_model.property.lecm-stmeditor_transitionLabel.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0430
 
 lecm-stmeditor_model.property.lecm-stmeditor_inputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
-lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
-lecm-stmeditor_model.property.lecm-stmeditor_inputToType.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0432 \u043F\u0440\u043E\u0446\u0435\u0441\u0441
+lecm-stmeditor_model.property.lecm-stmeditor_inputFromType.title=\u0422\u0438\u043F
+lecm-stmeditor_model.property.lecm-stmeditor_inputToType.title=\u0422\u0438\u043F
 lecm-stmeditor_model.property.lecm-stmeditor_inputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 
 lecm-stmeditor_model.property.lecm-stmeditor_outputToValue.title=\u0418\u043C\u044F \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439
-lecm-stmeditor_model.property.lecm-stmeditor_outputFromType.title=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0434\u0430\u0447\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_outputFromType.title=\u0422\u0438\u043F
 lecm-stmeditor_model.property.lecm-stmeditor_outputFromValue.title=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
-lecm-stmeditor_model.property.lecm-stmeditor_outputToType.title=\u041F\u0435\u0440\u0435\u0434\u0430\u0447\u0430 \u0432 \u043C\u0430\u0448\u0438\u043D\u0443 \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0439
+lecm-stmeditor_model.property.lecm-stmeditor_outputToType.title=\u0422\u0438\u043F
 
-listconstraint.lecm-stmeditor_toTypeList.VARIABLE=\u041F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u0430\u044F \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
+listconstraint.lecm-stmeditor_toTypeList.VARIABLE=\u0412 \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u0443\u044E \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 listconstraint.lecm-stmeditor_toTypeList.VALUE=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 lecm-stmeditor_model.property.lecm-stmeditor_transitionWorkflowId.title=\u041F\u0440\u043E\u0446\u0435\u0441\u0441
 lecm-stmeditor_model.property.lecm-stmeditor_workflowId.title=ID \u041F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
@@ -41,9 +41,9 @@ lecm-stmeditor_model.property.lecm-stmeditor_permissionTypeValue.title=\u0414\u0
 listconstraint.lecm-stmeditor_permissionType.noaccess=\u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
 listconstraint.lecm-stmeditor_permissionType.readonly=\u0427\u0442\u0435\u043D\u0438\u0435
 listconstraint.lecm-stmeditor_permissionType.full=\u0417\u0430\u043F\u0438\u0441\u044C
-listconstraint.lecm-stmeditor_toTypeList.FIELD=\u041F\u043E\u043B\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-listconstraint.lecm-stmeditor_fromTypeList.VARIABLE=\u041F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u0430\u044F \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
-listconstraint.lecm-stmeditor_fromTypeList.FIELD=\u041F\u043E\u043B\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+listconstraint.lecm-stmeditor_toTypeList.FIELD=\u0412 \u043F\u043E\u043B\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+listconstraint.lecm-stmeditor_fromTypeList.VARIABLE=\u0418\u0437 \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u043E\u0439 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
+listconstraint.lecm-stmeditor_fromTypeList.FIELD=\u0418\u0437 \u043F\u043E\u043B\u044F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 listconstraint.lecm-stmeditor_fromTypeList.VALUE=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 lecm-stmeditor_model.property.lecm-stmeditor_conditionAccess.title=\u0423\u0441\u043B\u043E\u0432\u0438\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
 lecm-stmeditor_model.property.lecm-stmeditor_condition.title=\u0423\u0441\u043B\u043E\u0432\u0438\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E\u0441\u0442\u0438
