--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
@@ -36,3 +36,6 @@ document.main.form.edit=\u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0435 \
 
 page.lecm.documents-journal.title=\u0416\u0443\u0440\u043D\u0430\u043B \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
 page.lecm.documents-journal.description=\u0411\u0430\u0437\u043E\u0432\u044B\u0439 \u0436\u0443\u0440\u043D\u0430\u043B \u0434\u043B\u044F \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u043E\u0432
+
+header.doc-journal.label=\u0411\u0430\u0437\u043E\u0432\u044B\u0439 \u0436\u0443\u0440\u043D\u0430\u043B
+header.doc-journal.description=\u0411\u0430\u0437\u043E\u0432\u044B\u0439 \u0436\u0443\u0440\u043D\u0430\u043B
