--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
@@ -26,6 +26,7 @@ lecm-stmeditor_statusTransitionType=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\
 lecm-stmeditor_statusExpression=\u0423\u0441\u043B\u043E\u0432\u0438\u0435
 lecm-stmeditor_statusTarget=\u0421\u0442\u0430\u0442\u0443\u0441
 statemachine.editor.form.permissions=\u041F\u0440\u0430\u0432\u0430 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
+statemachine.editor.form.timer=\u0422\u0430\u0439\u043C\u0435\u0440
 
 button.export-xml=\u042D\u043A\u0441\u043F\u043E\u0440\u0442 XML
 button.import-xml=\u0418\u043C\u043F\u043E\u0440\u0442 XML
