--- a/lecm-contracts-fake/repo/src/main/config/messages/lecm-contracts-fake-model_ru.properties
+++ b/lecm-contracts-fake/repo/src/main/config/messages/lecm-contracts-fake-model_ru.properties
@@ -1,2 +1,2 @@
-lecm-contract-documents_model.type.lecm-contract_document.title=\u0414\u043E\u0433\u043E\u0432\u043E\u0440 (Fake)
-lecm-contract-documents_model.type.lecm-contract_document.description=\u0422\u0435\u0441\u0442\u043E\u0432\u044B\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+lecm-contract-fake_model.type.lecm-contract-fake_document.title=\u0414\u043E\u0433\u043E\u0432\u043E\u0440 (Fake)
+lecm-contract-fake_model.type.lecm-contract-fake_document.description=\u0422\u0435\u0441\u0442\u043E\u0432\u044B\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
