--- a/lecm-dictionary/repo/src/main/config/messages/dictionary_ru.properties
+++ b/lecm-dictionary/repo/src/main/config/messages/dictionary_ru.properties
@@ -4,3 +4,7 @@ lecm-dic_dictionaryStructure.property.lecm-dic_description.title=\u041E\u043F\u0
 lecm-dic_dictionaryStructure.property.lecm-dic_description.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 lecm-dic_dictionaryStructure.property.lecm-dic_active.title=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
 lecm-dic_dictionaryStructure.property.lecm-dic_active.description=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
+
+lecm-currency_model.type.lecm-currency_currency.title=\u0412\u0430\u043B\u044E\u0442\u044B
+lecm-currency_model.property.lecm-currency_alphabetic-code.title=\u0422\u0440\u0435\u0445\u0431\u0443\u043A\u0432\u0435\u043D\u043D\u044B\u0439 \u0430\u043B\u0444\u0430\u0432\u0438\u0442\u043D\u044B\u0439 \u043A\u043E\u0434 \u0432\u0430\u043B\u044E\u0442\u044B
+lecm-currency_model.property.lecm-currency_digital-code.title=\u0422\u0440\u0435\u0445\u0437\u043D\u0430\u0447\u043D\u044B\u0439 \u0446\u0438\u0444\u0440\u043E\u0432\u043E\u0439 \u043A\u043E\u0434 \u0432\u0430\u043B\u044E\u0442\u044B
