--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
@@ -14,6 +14,10 @@ lecm-contract_model.property.lecm-contract_dateConclusionContracts.title=\u0414\
 lecm-contract_model.property.lecm-contract_dateConclusionContracts.description=\u0414\u0430\u0442\u0430 \u0437\u0430\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_summaryContent.title=\u041A\u0440\u0430\u0442\u043A\u043E\u0435 \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_summaryContent.description=\u041A\u0440\u0430\u0442\u043A\u043E\u0435 \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+lecm-contract_model.property.lecm-contract_signedCounterparty.title=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u043E \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u043E\u043C
+lecm-contract_model.property.lecm-contract_signedCounterparty.description=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u043E \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u043E\u043C
+lecm-contract_model.property.lecm-contract_signatoryCounterparty.title=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0442 \u0441\u043E \u0441\u0442\u043E\u0440\u043E\u043D\u044B \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u0430
+lecm-contract_model.property.lecm-contract_signatoryCounterparty.description=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0442 \u0441\u043E \u0441\u0442\u043E\u0440\u043E\u043D\u044B \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u0430
 lecm-contract_model.property.lecm-contract_totalSum.title=\u041E\u0431\u0449\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
 lecm-contract_model.property.lecm-contract_totalSum.description=\u041E\u0431\u0449\u0430\u044F \u0441\u0443\u043C\u043C\u0430 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
 lecm-contract_model.property.lecm-contract_startDate.title=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
@@ -38,3 +42,5 @@ lecm-contract_model.association.lecm-contract_subjectContract-assoc.title=\u0422
 lecm-contract_model.association.lecm-contract_subjectContract-assoc.description=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
 lecm-contract_model.association.lecm-contract_reasonDelete-assoc.description=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
+lecm-contract_model.association.lecm-contract_representative-assoc.title=\u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u0438
+lecm-contract_model.association.lecm-contract_representative-assoc.description=\u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u0438
