--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -21,4 +21,5 @@ contract.status=\u0421\u0442\u0430\u0442\u0443\u0441
 contract.conclusionDate=\u0414\u0430\u0442\u0430 \u0437\u0430\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
 
 contract.additionalDocumentType=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+contract.deleteReason=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
 
