--- a/lecm-contractors/share/src/main/java/ru/it/lecm/contractors/form/form_ru.properties
+++ b/lecm-contractors/share/src/main/java/ru/it/lecm/contractors/form/form_ru.properties
@@ -19,6 +19,7 @@ tabs.contractor.codes=\u041A\u043E\u0434\u044B
 tabs.contractor.bankinfo=\u0420\u0435\u043A\u0432\u0438\u0437\u0438\u0442\u044B \u0431\u0430\u043D\u043A\u0430
 tabs.contractor.representatives=\u041F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u0438\u0442\u0435\u043B\u0438
 
+lecm-contractor_computed-parentname=\u041C\u0430\u0442\u0435\u0440\u0438\u043D\u0441\u043A\u0430\u044F \u043A\u043E\u043C\u043F\u0430\u043D\u0438\u044F
 
 ################################################################
 #### Representatives Page
