--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
@@ -39,3 +39,5 @@ page.lecm.documents-journal.description=\u0411\u0430\u0437\u043E\u0432\u044B\u04
 
 header.doc-journal.label=\u0411\u0430\u0437\u043E\u0432\u044B\u0439 \u0436\u0443\u0440\u043D\u0430\u043B
 header.doc-journal.description=\u0411\u0430\u0437\u043E\u0432\u044B\u0439 \u0436\u0443\u0440\u043D\u0430\u043B
+
+form.logicecm.view=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0438\u0441\u0442\u043E\u0440\u0438\u0438 \u0441\u0442\u0430\u0442\u0443\u0441\u043E\u0432
