--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -22,4 +22,9 @@ contract.conclusionDate=\u0414\u0430\u0442\u0430 \u0437\u0430\u043A\u043B\u044E\
 
 contract.additionalDocumentType=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 contract.deleteReason=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
+contract.contractTime.link=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
+contract.contractTime.attachment=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u043D\u044B\u0439 \u043E\u0431\u0440\u0430\u0437 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+contract.contractTime.baseOnDocument=\u041E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+contract.contractTime.fromTime=\u041D\u0430\u0447\u0430\u043B\u043E \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 
