--- a/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model_ru.properties
@@ -14,3 +14,5 @@ lecm-additional-document_model.association.lecm-additional-document_additionalDo
 lecm-additional-document_model.association.lecm-additional-document_additionalDocumentType.description=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 lecm-additional-document_model.association.lecm-additional-document_reasonDelete-assoc.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
 lecm-additional-document_model.association.lecm-additional-document_reasonDelete-assoc.description=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
+lecm-additional-document_model.association.lecm-additional-document_document-assoc.title=\u041A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443 \u2116
+lecm-additional-document_model.association.lecm-additional-document_document-assoc.description=\u041A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443 \u2116
