--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -30,3 +30,6 @@ contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0
 
 contract.contractTermination.baseOnDocument=\u041E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 
+lecm-additional-document_counterparty=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
+lecm-additional-document_contractType=\u0412\u0438\u0434 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+
